[workspace]
resolver = "2"
members = ["crates/foliage", "crates/sandbox"]

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
bincode = { version = "1.3.3" }
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3"
bytes = "1"
thiserror = "2.0.11"
sha3 = "0.10.8"
hex = "0.4.3"